--- a/project-service/src/main/resources/templates/index.html
+++ b/project-service/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Project - Stat</title>
+<title>Project-Overview</title>
 <link rel="stylesheet" href="/js/layui/css/layui.css">
 </head>
 <body>
 	<div class="layui-layout layui-layout-admin">
 		<div class="layui-header">
-			<div class="layui-logo layui-hide-xs layui-bg-black">项目信息统计</div>
+			<div class="layui-logo layui-hide-xs layui-bg-black">BGP项目信息管理系统</div>
 			<!-- 头部区域（可配合layui 已有的水平导航） -->
 			<!-- <ul class="layui-nav layui-layout-left">
 				<!-- 移动端显示 --
@@ -68,7 +68,7 @@
 						href="javascript:;">项目立项</a>
 						<dl class="layui-nav-child">
 							<dd>
-								<a href="javascript:;" class="leftdaohang"  data-url="/report/reportList.html" mytitle="日报管理" >项目立项</a>
+								<a href="javascript:;" class="leftdaohang"  data-url="/project/project-apply.html" mytitle="日报管理" ><span>-</span>项目立项</a>
 							</dd>
 							<!--  <dd>
 								<a href="javascript:;" class="leftdaohang"  data-url="/report/reportForm.html" mytitle="日报填报">日报填报</a>
@@ -81,7 +81,17 @@
 					<li class="layui-nav-item"><a href="javascript:;">项目列表</a>
 						<dl class="layui-nav-child">
 							<dd>
-								<a href="javascript:;" class="leftdaohang"  data-url="/project/project_list.html" mytitle="2022年度-项目情况">2022年度</a>
+								<a href="javascript:;" class="leftdaohang"  data-url="/project/project_list.html" mytitle="2022年度-项目情况"><span>- </span>2022年度</a>
+							</dd>
+						</dl>
+					</li>
+					<li class="layui-nav-item"><a href="javascript:;">OBN时效统计</a>
+						<dl class="layui-nav-child">
+							<dd>
+								<a href="javascript:;">船舶管理</a>
+							</dd>
+							<dd>
+								<a href="javascript:;">数据管理</a>
 							</dd>
 						</dl>
 					</li>
@@ -98,16 +108,7 @@
 							</dd>
 						</dl>
 					</li>
-					<li class="layui-nav-item"><a href="javascript:;">OBN时效统计</a>
-						<dl class="layui-nav-child">
-							<dd>
-								<a href="javascript:;">船舶管理</a>
-							</dd>
-							<dd>
-								<a href="javascript:;">数据管理</a>
-							</dd>
-						</dl>
-					</li>
+					
 					<!--<li class="layui-nav-item"><a href="javascript:;">click
 							menu item</a></li>
 					<li class="layui-nav-item"><a href="">the links</a></li>-->
