--- a/project-service/src/main/resources/templates/index.html
+++ b/project-service/src/main/resources/templates/index.html
@@ -64,20 +64,9 @@
 			<div class="layui-side-scroll">
 				<!-- 左侧导航区域（可配合layui已有的垂直导航） -->
 				<ul class="layui-nav layui-nav-tree" lay-filter="test">
-					<li class="layui-nav-item layui-nav-itemed"><a class=""
-						href="javascript:;">项目立项</a>
-						<dl class="layui-nav-child">
-							<dd>
-								<a href="javascript:;" class="leftdaohang"  data-url="/project/project-apply.html" mytitle="日报管理" ><span>-</span>项目立项</a>
-							</dd>
-							<!--  <dd>
-								<a href="javascript:;" class="leftdaohang"  data-url="/report/reportForm.html" mytitle="日报填报">日报填报</a>
-							</dd>
-							<dd><a href="javascript:;" class="leftdaohang"  data-url="/report/stat_day_sqkm.html" mytitle="日产量统计">日产量统计</a></dd>
-            				<dd><a href="javascript:;" class="leftdaohang"  data-url="/report/stat_week_sqkm.html" mytitle="周产量统计">周产量统计</a></dd>
-            				<dd><a href="javascript:;" class="leftdaohang"  data-url="/report/stat_week_income.html" mytitle="周收入统计">周收入统计</a></dd>
-							<dd><a href="javascript:;" class="leftdaohang"  data-url="/report/stat_time_rate.html" mytitle="时间占比统计">时间占比统计</a></dd>
-            			--></dl></li>
+					<li class="layui-nav-item"><a href="javascript:;"></a></li>
+					<li class="layui-nav-item"><a href="javascript:;" class="leftdaohang"  mytitle="立项管理" data-url="/project/project_apply.html">
+							立项管理</a></li>
 					<li class="layui-nav-item"><a href="javascript:;">项目列表</a>
 						<dl class="layui-nav-child">
 							<dd>
