--- a/project-service/src/main/resources/templates/index.html
+++ b/project-service/src/main/resources/templates/index.html
@@ -11,14 +11,14 @@
 		<div class="layui-header">
 			<div class="layui-logo layui-hide-xs layui-bg-black">BGP项目信息管理系统</div>
 			<!-- 头部区域（可配合layui 已有的水平导航） -->
-			<!-- <ul class="layui-nav layui-layout-left">
-				<!-- 移动端显示 --
+			<ul class="layui-nav layui-layout-left">
+				<!-- 移动端显示 -->
 				<li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm"
 					lay-header-event="menuLeft"><i
 					class="layui-icon layui-icon-spread-left"></i></li>
 
-				<li class="layui-nav-item layui-hide-xs"><a href="">nav 1</a></li>
-				<li class="layui-nav-item layui-hide-xs"><a href="">nav 2</a></li>
+				<li class="layui-nav-item layui-hide-xs"><a href="http://175.178.33.209:8080/" target="_blank">日报管理</a></li>
+				<!--  <li class="layui-nav-item layui-hide-xs"><a href="">nav 2</a></li>
 				<li class="layui-nav-item layui-hide-xs"><a href="">nav 3</a></li>
 				<li class="layui-nav-item"><a href="javascript:;">nav
 						groups</a>
@@ -32,8 +32,8 @@
 						<dd>
 							<a href="">menu 33</a>
 						</dd>
-					</dl></li>
-			</ul>-->
+					</dl></li>-->
+			</ul>
 			<ul class="layui-nav layui-layout-right">
 				<li class="layui-nav-item layui-hide layui-show-md-inline-block">
 					<a href="javascript:;"> <img
